# PY-analyzer

./: .gitignore  Dockerfile  README.md  analyze.py  analyzer.db  changelog.md  docker-compose.yml  main.py  package-lock.json  pyproject.toml  requirements.txt
analyzer/: logger.py  main.py
analyzer/parsers/: yaml_parser.py
analyzer/rules/: base.py  best_practices.py  performance.py  registry.py  reliability.py  security.py
api/: database.py  main.py
api/routers/: analyze.py  history.py
api/schemas/: models.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/debug/: debug_log.md  error_codes.md
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: IssueList.jsx  NavMenu.jsx  Sidebar.jsx  Topbar.jsx
frontend/src/pages/: DocsPage.jsx  HelpPage.jsx  HistoryPage.jsx  LandingPage.jsx  ResultPage.jsx  UploadPage.jsx
tests/fixtures/: bad_pipeline.gitlab-ci.yml  good_pipeline.gitlab-ci.yml
tests/integration/: test_api.py
tests/unit/: test_parser.py  test_parser_and_security.py  test_security_rules.py
